[gd_scene load_steps=20 format=3 uid="uid://dntcwtg287jyg"]

[ext_resource type="Script" uid="uid://iykh0strsi7x" path="res://Scripts/FixUIPos.gd" id="1_8gbba"]
[ext_resource type="Script" uid="uid://du2h4agc3q6sf" path="res://Scripts/PlayerMovement.gd" id="1_bo1nx"]
[ext_resource type="Texture2D" uid="uid://bc21k6bp32o4e" path="res://Assets/Book plane 2-1.png" id="3_8gbba"]
[ext_resource type="Texture2D" uid="uid://bcq6d4ml28x3" path="res://Assets/Book plane 2-2.png" id="4_kry3j"]
[ext_resource type="Texture2D" uid="uid://d2u4dla8kx8jl" path="res://Assets/Book plane 2-3.png" id="5_21xkr"]
[ext_resource type="Script" uid="uid://i6swa0ainueh" path="res://Scripts/GateHandler.gd" id="6_21xkr"]
[ext_resource type="Texture2D" uid="uid://cdnv8su1e3k5a" path="res://Assets/question.jpg" id="7_6bp64"]
[ext_resource type="Script" uid="uid://e1ws37uel5ig" path="res://Scripts/QWindow.gd" id="8_344ge"]
[ext_resource type="Script" uid="uid://cey71qsw8ar2" path="res://Scripts/LineEditHandler.gd" id="9_ynf5e"]
[ext_resource type="AudioStream" uid="uid://rh8mvujrvaj7" path="res://Assets/correct_answer.wav" id="10_hptm8"]
[ext_resource type="AudioStream" uid="uid://bd1ok2cki0s1l" path="res://Assets/soundtrack_1.ogg" id="11_6iyac"]
[ext_resource type="AudioStream" uid="uid://1fdkto1ugwln" path="res://Assets/wrong_answer.wav" id="11_d1ilt"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_21xkr"]
points = PackedVector2Array(-64, -20.5, -64, -6.5, -14, 43.5, -8, 45.5, 9, 45.5, 64, 17.5, 64, 2.5, 19, -43.5, -24, -46.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_kry3j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8gbba")
}, {
"duration": 1.0,
"texture": ExtResource("4_kry3j")
}, {
"duration": 1.0,
"texture": ExtResource("5_21xkr")
}],
"loop": false,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8gbba")
}, {
"duration": 1.0,
"texture": ExtResource("5_21xkr")
}],
"loop": false,
"name": &"fly2",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6bp64"]
size = Vector2(1152, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21xkr"]
size = Vector2(1152, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gbba"]
size = Vector2(100, 624)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kry3j"]
size = Vector2(100, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_344ge"]
size = Vector2(111, 111)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoseScreen" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -352.0
offset_bottom = -298.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_8gbba")

[node name="RichTextLabel" type="RichTextLabel" parent="LoseScreen"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][font_size=64]You Lost!
[font_size=32]Answer a thermodynamics question to revive?
"

[node name="HBoxContainer" type="HBoxContainer" parent="LoseScreen"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="QBtn" type="Button" parent="LoseScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Revive Me!"

[node name="EBtn" type="Button" parent="LoseScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit to Main Menu"

[node name="WinScreen" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -352.0
offset_bottom = -298.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_8gbba")

[node name="RichTextLabel" type="RichTextLabel" parent="WinScreen"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][font_size=64]Congratulations!
[font_size=32]You've mastered this topic!
"

[node name="HBoxContainer" type="HBoxContainer" parent="WinScreen"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="QBtn" type="Button" parent="WinScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play Again!"

[node name="EBtn" type="Button" parent="WinScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit to Main Menu"

[node name="PlayerRB" type="RigidBody2D" parent="."]
position = Vector2(115, 297)
lock_rotation = true
contact_monitor = true
max_contacts_reported = 2
script = ExtResource("1_bo1nx")
FORCE_SCALE = 300.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerRB"]
position = Vector2(0, 9.5)
shape = SubResource("ConvexPolygonShape2D_21xkr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerRB"]
sprite_frames = SubResource("SpriteFrames_kry3j")
animation = &"fly"

[node name="Area2D" type="Area2D" parent="PlayerRB"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerRB/Area2D"]
position = Vector2(0, 9.5)
shape = SubResource("ConvexPolygonShape2D_21xkr")

[node name="Bottom Wall" type="StaticBody2D" parent="."]
position = Vector2(0, 648)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bottom Wall"]
position = Vector2(576, 50)
shape = SubResource("RectangleShape2D_6bp64")

[node name="Top Wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top Wall"]
position = Vector2(576, -50)
shape = SubResource("RectangleShape2D_21xkr")

[node name="Gates" type="Node2D" parent="."]
script = ExtResource("6_21xkr")

[node name="Gate1" type="Node2D" parent="Gates"]
position = Vector2(446, 0)

[node name="Gate_1A" type="StaticBody2D" parent="Gates/Gate1"]
position = Vector2(0, 862)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate1/Gate_1A"]
position = Vector2(0, -148)
shape = SubResource("RectangleShape2D_8gbba")

[node name="Sprite2D" type="Sprite2D" parent="Gates/Gate1/Gate_1A"]
position = Vector2(0, -147.99998)
scale = Vector2(1, 4.16)
texture = SubResource("PlaceholderTexture2D_kry3j")

[node name="Gate_1B" type="StaticBody2D" parent="Gates/Gate1"]
position = Vector2(0, 29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate1/Gate_1B"]
position = Vector2(0, -148)
shape = SubResource("RectangleShape2D_8gbba")

[node name="Sprite2D" type="Sprite2D" parent="Gates/Gate1/Gate_1B"]
position = Vector2(0, -147.99998)
scale = Vector2(1, 4.16)
texture = SubResource("PlaceholderTexture2D_kry3j")

[node name="Question" type="Area2D" parent="Gates/Gate1"]
position = Vector2(0, 295)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate1/Question"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_344ge")

[node name="Sprite2D" type="Sprite2D" parent="Gates/Gate1/Question"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_6bp64")

[node name="Gate2" type="Node2D" parent="Gates"]
position = Vector2(791, 0)

[node name="Gate_1A" type="StaticBody2D" parent="Gates/Gate2"]
position = Vector2(0, 862)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate2/Gate_1A"]
position = Vector2(0, -148)
shape = SubResource("RectangleShape2D_8gbba")

[node name="Sprite2D" type="Sprite2D" parent="Gates/Gate2/Gate_1A"]
position = Vector2(0, -147.99998)
scale = Vector2(1, 4.16)
texture = SubResource("PlaceholderTexture2D_kry3j")

[node name="Gate_1B" type="StaticBody2D" parent="Gates/Gate2"]
position = Vector2(0, 29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate2/Gate_1B"]
position = Vector2(0, -148)
shape = SubResource("RectangleShape2D_8gbba")

[node name="Sprite2D" type="Sprite2D" parent="Gates/Gate2/Gate_1B"]
position = Vector2(0, -147.99998)
scale = Vector2(1, 4.16)
texture = SubResource("PlaceholderTexture2D_kry3j")

[node name="Question" type="Area2D" parent="Gates/Gate2"]
position = Vector2(0, 295)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate2/Question"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_344ge")

[node name="Sprite2D" type="Sprite2D" parent="Gates/Gate2/Question"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_6bp64")

[node name="Gate3" type="Node2D" parent="Gates"]
position = Vector2(1136, 0)

[node name="Gate_1A" type="StaticBody2D" parent="Gates/Gate3"]
position = Vector2(0, 862)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate3/Gate_1A"]
position = Vector2(0, -148)
shape = SubResource("RectangleShape2D_8gbba")

[node name="Sprite2D" type="Sprite2D" parent="Gates/Gate3/Gate_1A"]
position = Vector2(0, -147.99998)
scale = Vector2(1, 4.16)
texture = SubResource("PlaceholderTexture2D_kry3j")

[node name="Gate_1B" type="StaticBody2D" parent="Gates/Gate3"]
position = Vector2(0, 29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate3/Gate_1B"]
position = Vector2(0, -148)
shape = SubResource("RectangleShape2D_8gbba")

[node name="Sprite2D" type="Sprite2D" parent="Gates/Gate3/Gate_1B"]
position = Vector2(0, -147.99998)
scale = Vector2(1, 4.16)
texture = SubResource("PlaceholderTexture2D_kry3j")

[node name="Question" type="Area2D" parent="Gates/Gate3"]
position = Vector2(0, 295)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate3/Question"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_344ge")

[node name="Sprite2D" type="Sprite2D" parent="Gates/Gate3/Question"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_6bp64")

[node name="Gate4" type="Node2D" parent="Gates"]
position = Vector2(1481, 0)

[node name="Gate_1A" type="StaticBody2D" parent="Gates/Gate4"]
position = Vector2(0, 862)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate4/Gate_1A"]
position = Vector2(0, -148)
shape = SubResource("RectangleShape2D_8gbba")

[node name="Sprite2D" type="Sprite2D" parent="Gates/Gate4/Gate_1A"]
position = Vector2(0, -147.99998)
scale = Vector2(1, 4.16)
texture = SubResource("PlaceholderTexture2D_kry3j")

[node name="Gate_1B" type="StaticBody2D" parent="Gates/Gate4"]
position = Vector2(0, 29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate4/Gate_1B"]
position = Vector2(0, -148)
shape = SubResource("RectangleShape2D_8gbba")

[node name="Sprite2D" type="Sprite2D" parent="Gates/Gate4/Gate_1B"]
position = Vector2(0, -147.99998)
scale = Vector2(1, 4.16)
texture = SubResource("PlaceholderTexture2D_kry3j")

[node name="Question" type="Area2D" parent="Gates/Gate4"]
position = Vector2(0, 295)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate4/Question"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_344ge")

[node name="Sprite2D" type="Sprite2D" parent="Gates/Gate4/Question"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_6bp64")

[node name="QWindow" type="Window" parent="."]
process_mode = 2
oversampling_override = 1.0
initial_position = 1
size = Vector2i(500, 500)
visible = false
unresizable = true
borderless = true
script = ExtResource("8_344ge")

[node name="VBoxContainer" type="VBoxContainer" parent="QWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PromptLabel" type="Label" parent="QWindow/VBoxContainer"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "
What is the unit of gravity?"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Options" type="HBoxContainer" parent="QWindow/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Numerical" type="LineEdit" parent="QWindow/VBoxContainer/Options"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("9_ynf5e")

[node name="Option1" type="Button" parent="QWindow/VBoxContainer/Options"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Option 1"

[node name="Option2" type="Button" parent="QWindow/VBoxContainer/Options"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Option 2"

[node name="Option3" type="Button" parent="QWindow/VBoxContainer/Options"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Option 3"

[node name="Option4" type="Button" parent="QWindow/VBoxContainer/Options"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Option 4"

[node name="CorrectAnswer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("10_hptm8")

[node name="Music" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("11_6iyac")
autoplay = true
parameters/looping = true

[node name="Dead" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("11_d1ilt")

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -308.0
offset_bottom = 71.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 64
text = "Score: 999"
horizontal_alignment = 2
